# bitcointestapp

./: README.md
bitcointestapp/: CMakeLists.txt  REDME.md  main.cpp
bitcointestapp/src/: dbstorage.h  pipecommunication.h  timer.h
src/: htttpcommunication.h  irunnable.h  loggerinstances.h  processor.h
